2003-12-26  Bruno Haible  <bruno@clisp.org>

	Support for C#.
	* csharpcomp.sh.in: New file.
	* csharpcomp.h: New file.
	* csharpcomp.c: New file.
	* csharpexec.sh.in: New file.
	* csharpexec.h: New file.
	* csharpexec.c: New file.
	* classpath.c (CLASSPATHVAR): New variable.
	(new_classpath, set_classpath, reset_classpath): Use it instead of
	hardcoding "CLASSPATH".
	* Makefile.am (libgettextlib_la_SOURCES): Add csharpcomp.h,
	csharpcomp.c, csharpexec.h, csharpexec.c.
	(examplesconfig_DATA): Add csharpcomp.sh.in, csharpexec.sh.in.
	* Makefile.msvc (OBJECTS): Add csharpcomp.obj, csharpexec.obj.
	(csharpcomp.obj, csharpexec.obj): New rules.
	* Makefile.vms (OBJECTS): Add csharpcomp.obj, csharpexec.obj.
	(csharpcomp.obj, csharpexec.obj): New rules.

2003-12-28  Bruno Haible  <bruno@clisp.org>

	* wait-process.c (wait_subprocess): Add ignore_sigpipe argument.
	* wait-process.c (wait_subprocess): Likewise. Handle SIGPIPE specially.
	* execute.h (execute): Add ignore_sigpipe argument.
	* execute.c (execute): Likewise.
	* javacomp.c (compile_java_class): Always pass ignore_sigpipe = false.
	* javaexec.c (execute_java_class): Likewise.

2003-09-12  Paul Eggert  <eggert@twinsun.com>

	* setenv.c (clearenv): Define via prototype.

2003-09-10  Bruno Haible  <bruno@clisp.org>

	* setenv.c: Include <stdlib.h> and <string.h> unconditionally.
	* unsetenv.c: Likewise.

2003-12-12  Bruno Haible  <bruno@clisp.org>

	Assume automake-1.8.
	* Makefile.am (install-exec-local): Renamed from install-exec-am.

2003-11-30  Bruno Haible  <bruno@clisp.org>

	* alloca.c: Remove file.
	* Makefile.am (LIBADD_SOURCE): Remove alloca.c.
	(libgettextlib_la_LIBADD): Drop @LTALLOCA@.

2003-11-30  Bruno Haible  <bruno@clisp.org>

	Safer stack allocation.
	* allocsa.h: New file.
	* allocsa.c: New file.
	* xallocsa.h: New file.
	* xallocsa.c: New file.
	* canonicalize.c: Include allocsa.h.
	(__realpath): Use allocsa instead of alloca. Don't clobber errno right
	before returning NULL.