@@ -1,7 +1,7 @@
 #!/bin/sh
 # Compile a C# program.
 
-# Copyright (C) 2003 Free Software Foundation, Inc.
+# Copyright (C) 2003-2004 Free Software Foundation, Inc.
 # Written by Bruno Haible <bruno@clisp.org>, 2003.
 #
 # This program is free software; you can redistribute it and/or modify
@@ -103,8 +103,19 @@ if test -n "@HAVE_CSCC@"; then
   exec cscc $options_cscc $sources
 else
   if test -n "@HAVE_MCS@"; then
+    # mcs prints it errors and warnings to stdout, not stderr. Furthermore it
+    # adds a useless line "Compilation succeeded..." at the end. Correct both.
+    sed_drop_success_line='${
+/^Compilation succeeded/d
+}'
+    tmpfile=`(mktemp "${TMPDIR-/tmp}/mcserrXXXXXXXX") 2>/dev/null || echo ${TMPDIR-/tmp}/mcserr$$`
+    trap 'rm -f "$tmpfile"' 1 2 3 15
     test -z "$CSHARP_VERBOSE" || echo mcs $options_mcs $sources
-    exec mcs $options_mcs $sources
+    mcs $options_mcs $sources > "$tmpfile"
+    result=$?
+    sed -e "$sed_drop_success_line" < "$tmpfile" >&2
+    rm -f "$tmpfile"
+    exit $?
   else
     if test -n "@HAVE_CSC@"; then
       test -z "$CSHARP_VERBOSE" || echo csc $options_csc $sources
