@@ -1,3 +1,11 @@
+2004-01-10  Bruno Haible  <bruno@clisp.org>
+
+	* csharpcomp.sh.in: Copy the mcs output to stderr, dropping the
+	"Compilation succeeded" message.
+	* csharpcomp.c: Include errno.h, pipe.h, wait-process.h, getline.h.
+	(compile_csharp_class): Copy the mcs output to stderr, dropping the
+	"Compilation succeeded" message.
+
 2003-12-26  Bruno Haible  <bruno@clisp.org>
 
 	Support for C#.
